Study/k8s/082321.yml


---
#@ create user /etc/passwd
adduser neerajv  # exception only admin can add the user
sudo adduser neerajv
sudo whoami
---
#@ add user in to the group /etc/group
sudo usermod -aG <group> <user>     # add user into the group
sudo usermod -aG docker jenkins     # add jenkins user in to the docker group

---
#@permissions (4-read,2-write,1-execute, owner group all)
sudo chmod 751 <filename>       # owner-all, group-read and execute, all-execute)
sudo chmod 751 <name of the directory> -R

---
# use script to create user DevOps, today@1234 (user,sudoers,ssh)
---
#@ add the user to the sudoers file. This file contains information that controls which users and groups are granted with sudo privelleges.
nano /etc/sudoers
neerajv ALL= (ALL) NOPASSWD:ALL
su <user>   # switch user

---
#@pre-requisite
# Install Docker (docker run as a service)
#https://docs.docker.com/engine/install/ubuntu/
/*
Install docker  ##ubunty 20.4 , t2.micro 20.10.16
		sudo apt-get update
		sudo apt-get install -y apt-transport-https ca-certificates curl gnupg-agent software-properties-common
		curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
		sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
		sudo apt-get update
		sudo apt-get install docker-ce docker-ce-cli containerd.io
*/
docker -v
docker version
service docker status
service docker start
service docker stop
service docker status
journalctl -u docker   # service logs
---

#@Install kubernetes
#https://v1-20.docs.kubernetes.io/docs/setup/production-environment/tools/kubeadm/install-kubeadm/
/*
## Install Docker,kubeadm,kubelet,kubectl

sudo wget https://raw.githubusercontent.com/lerndevops/labs/master/scripts/installK8S-v1-23.sh -P /tmp
sudo chmod 755 /tmp/installK8S-v1-23.sh
sudo bash /tmp/installK8S-v1-23.sh

## Initialize kubernetes Master Node
 
   sudo kubeadm init --ignore-preflight-errors=all

   sudo mkdir -p $HOME/.kube
   sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
   sudo chown $(id -u):$(id -g) $HOME/.kube/config

   ## install networking driver -- Weave/flannel/canal/calico etc... 

   ## below installs weave networking driver 
    
  kubectl apply -f "https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')"

*/
sudo apt-get install -y kubectl kubelet kubeadm # master 
sudo apt-get install -y kubelet kubeadm # worker node , kubectl not required
sudo apt-get install -y kubectl # jumpbox ( only kubectl client utility)
---
#@jumpbox
create user in all nodes
cp .kube/config /tmp; chmod 755 /tmp/config # exeute this command from the master
scp <devops>@<IP> :/tmp/config .        # execute in the jumpbox secure copy <user>@IP copy from /tmp/config to current
mkdir .kube
mv config .kube/

#elect the master # /etc/kubernetes/admin.conf,   /var/lib/kubelet/config.yaml 
kubeadm init
kubectl get nodes #connection refused , kubectl don't know where is api-Server    
kubectl get nodes --kubeconfig=/etc/kubernetes/admin.conf   # contains api-Server info and certificate
# set the config in class path  by default k8s read the configuration from the user's root ./kube
kubectl get nodes # status NotReady (CNI)
---
#@ CNI weave network
kubectl apply -f "https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')"
kubectl get nodes # master is in Ready state
---
#@ worker join the master
kubeadm join < token>
---
#@ validate with other user (not with root)
logout
mkdir .kube
cd .kube
sudo cp /etc/kubernetes/admin.conf config
kubectl get nodes # permission denied owner of the config file is root
sudo chown <ownwer>:<group> config # owner of the config file is devops
ls -al
kubectl get nodes # ReadyStatus
#@ validate
kubectl get pod -n kube-system # kubelet is not available ( kubelet run as a service)
service kubelet status
service kubelet start
service kubelet restart
service kubelet stop
journalctl -u kubelet
journalctl -u kubelet -f
---

#@imp paths
#k8s components
/etc/kubernetes                        # contains config files but kubelet config is missing?
/etc/kubernetes/pki                    # contains certification but kubelet certification is missing?
/etc/kubernetes/manifests              # contains .yaml but kubelet .yaml is missing? Its run as a service not a static Pod

#kubelet paths? (run as a service)
/var/lib/kubelet/config.yaml          # kubelet config
/var/lib/kubelet/pki                  # kubelet certificate
/etc/kubernetes/kubelet.conf          # in worker node default kube api server is 6443 #kubectl cluster-info
---
#@ generate token
kubeadm token create -h
kubeadm token create --print-join-command       # In master to generate a token
---
#@ how to remove from the cluster
kubeadm reset -f   #in worker node (worker node remove from cluster)
kubectl delete node wnode1   # in control-plane
---
#@cluster info
cat /etc/os-release
lscpu
free -h
ps -ef          # All running processes
---
#@shortcuts
alias k='kubectl'
alias kr='kubectl run'
alias kc='kubectl create'
alias kf='kubectl crerate -f'
alias kg='kubectl get'
alias kd='kubectl delete'
alias ki='kubectl describe'
--dry-run=client -o yaml
k api-resources
k explain <resource>
k cluster-info
-------------------------------------------------------------------------------------------------------------------------------------------------------
---
#@nodes
kg nodes
kg nodes --show-labels
ki node wnode01

#labels
k label node wnode01 key=value
k label node wnode01 key-
k label node wnode01 key=value2 --overwrite

#taint
k taint node controlplane key=value:effect
k taint node controlplane key=value:effect-

#maintenance
k drain wnode02 # gracefully terminate the pods and node marked as un-schedule-able
k uncordon wnode02  # node become schedule-able
k cordon wnode02 ##node marked as unschedule-able
---
#@ namespaces (virtaul cluster with in the cluster)
kc ns dev
kc ns qa
kc ns prod
#@resourcequota (namespace)
kc quota devquota --hard='limits.cpu=1,limits.memory=128Mi' -n dev

---
#@ service account (just like human (user) access the app, one app access another app
kc sa admin
--------------------------------------------------------------------------------------------------------------------------------------------------------
---
#volumeMounts
kr nginx --image=nginx --dry-run=client -o yaml > vol-mount.yaml
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
         - name: emptyvolume
           mountPath: /tmp
         - name: persistvolume
           mountPath: /tmp/pvc
         - name: confvolume
           mountPath: /tmp/cnfg
         - name: secvolume
           mountPath: /tmp/sec
         - name: hostvolume
           mountPath: /tmp/usr
         - name: gcvolume
           mountPath: /tmp/gcp
         - name: awsvolume
           mountPath: /tmp/aws
         - name: nfsvolume
           mountPath: /tmp/nfs
           readOnly: true               # readOnly
---
#@Horizontal Pod Scalar HPA
k autoscale deploy <name> --min=2 --max=10 --cpu-percent=80

#vertical pod scalar (Increate the resources limits and request) # Limits Object type

#@job (meant for completion)
kc job myjob --image=busybox:1.28 --dry-run=client -o yaml -- /bin/sh -c 'date;sleep 3600' > job.yaml
spec:
  backoffLimit: 4 #If job fails then it will attempt 4 times
  completions: 3 # Job will be execute 3 times one-by-one
  parallelism: 4 #execute 4 jobs in parallel
  activeDeadLineSeconds: 30 #The activeDeadlineSeconds applies to the duration of the job, no matter how many Pods are created.Once a Job reaches
#  activeDeadlineSeconds, all of its running Pods are terminated and the Job status will become type: Failed with reason: DeadlineExceeded.

#@cj ( meant for schduling/batch processing)
kc cj myscheduler --image=busybox:1:28 --schedule='*/1 * * * *' --dry-run=client -o yaml -- /bin/sh -c 'date; sleep 3600' > cj.yaml
kind: CronJob
apiVersion: batch/v1beta1
metadata:
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:                   # Job's specification
      backoffLimit:
      parallelism:
      completions:
      activeDeadlineSeconds:
      template:     # Pod's
        spec:
  startingDeadLineSeconds: # It stands for the deadline in seconds for starting the job if it misses its scheduled time for any reason.
------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
#@Service
#create service
kc service <type> <name> --tcp=<serviceport>:<targetPort>
kc service clusterip db-service --tcp=5678:8080
kc service nodeport app-service --tcp=5678:8080
kc service loadbalancer load-service --tcp=5678:8080
kc service clusterip state-service --clusterip="None"

#expose
k expose pod <pod name> --name=<service name> --port=<service port> --target-port=<container port> 
k expose deploy <deployement name> --name=<service name> --port=<service port> --target-port=<container port> --type=NodePort
k expose deploy foo --name=foo --port=6262 --target-port=8080

#declarative
kind:
apiVersion:
metadata:
spec:
  type:
  selector:
  ports:   

kind: Service      # k api-resources
apiVersion: v1     # k explain < resource>
metadata:
spec:
  type:
  ports:
   - port:        # service port
     targetPort:   # container port
     nodePort:      # nodePort
  selector:
     app: front-end

#UC1: 
You want to have an external database cluster in production, but in your test environment you use your own databases.
You want to point your Service to a Service in a different Namespace or on another cluster
You are migrating a workload to Kubernetes. While evaluating the approach, you run only a portion of your backends in Kubernetes.
In any of these scenarios you can define a Service without a Pod selector. For example:
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
Because this Service has no selector, the corresponding Endpoints object is not created automatically. You can manually map the Service to the 
network address and port where it's running, by adding an Endpoints object manually:
apiVersion: v1
kind: Endpoints
metadata:
  name: my-service
subsets:
  - addresses:
      - ip: 192.0.2.42
    ports:
      - port: 9376
Accessing a Service without a selector works the same as if it had a selector. In the example above, traffic is routed to the single endpoint 
defined in the YAML: 192.0.2.42:9376 (TCP).

#UC2 
An ExternalName Service is a special case of Service that does not have selectors and uses DNS names instead
Services of type ExternalName map a Service to a DNS name, not to a typical selector such as my-service or cassandra. You specify these Services 
with the spec.externalName parameter.This Service definition, for example, maps the my-service Service in the prod namespace to my.database.example.com:

apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: prod
spec:
  type: ExternalName
  externalName: my.database.example.com

#UC3 (External IP)
If there are external IPs that route to one or more cluster nodes, Kubernetes Services can be exposed on those externalIPs. Traffic that ingresses 
into the cluster with the external IP (as destination IP), on the Service port, will be routed to one of the Service endpoints. 
externalIPs are not managed by Kubernetes and are the responsibility of the cluster administrator.

apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: MyApp
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9376
  externalIPs:
    - 80.11.12.10

##get
kg svc <name>
ki svc <name>
kg ep <svc name>

-----------------------------------------------------------------------------------------------------------------------------------------------------------
#@configuration (external dependencies)- cluster level
#@configmap
kc cm <name> --from-literal='' --from-literal='' 
kc cm <name> --from-file=file.txt
kc cm <name> --from-env-file=file.env

#@secret
kc secret <type> <name> --from-literal='' --from-literal='' 
kc secret <type> <name> --from-file='' --from-file='' 
kc secret <type> <name> --from-env-file='file.env'

#@docker secret
kubectl create secret docker-registry secret-tiger-docker \
  --docker-username=tiger \
  --docker-password=pass113 \
  --docker-email=tiger@acme.com
#@tls secret  
kubectl create secret tls my-tls-secret \
  --cert=path/to/cert/file \
  --key=path/to/key/file

echo -n 'admin' | base64
echo -n 'bxTb2stdedca' | base64 --decode
  
-----------------------------------------------------------------------------------------------------------------------------------------------------------
---
#@storage
#PersistenVolume
#hostPath
kind: PersistentVolume
apiVersion: v1
spec:
  name: my-pv
spec:
  accessModes:
    - ReadWriteMany
    - ReadWriteOnce
    - ReadOnlyMany 
  storageClassName:   
  capacity:
     storage: 100Mi
  hostPath:
     path:  

#nfs
kind: PersistentVolume
apiVersion: v1
spec:
  name: my-pv
spec:
  accessModes:
    - ReadWriteMany
    - ReadWriteOnce
    - ReadOnlyMany 
  storageClassName:   
  capacity:
     storage: 100Mi
  nfs:
     path:  
     server: 10.10.0.1

#@PersistenVolumeClaim
kind: PersistentVolumeClaim
apiVersion: v1
metadata:
   name: my-pvc
spec:
  accessModes:
    - ReadWriteOnce
    -ReadWriteMany
  resources:
     requests:
        storage: 100Mi

#@edit pvc
k edit pvc <my-pvc> --record
ki pvc my-pvc | grep -i record > /tmp/pvc.txt
kg pvc
Once underlying volume has been expanded by the storage provider, then the PersistentVolume object will reflect the updated size and the PVC will
have the FileSystemResizePending condition.
Once the PVC has the condition FileSystemResizePending then pod that uses the PVC can be restarted to finish file system resizing on the node. Restart can be achieved by deleting
and recreating the pod or by scaling down the deployment and then scaling it up again. Once file system resizing is done, the PVC will automatically
be updated to reflect new size.

#@storageClass ( Cloud specific , dynamically creates the pv)
kind: StorageClass
apiVersion: storage.k8s.io/v1
metadata:
provisioner: kubernetes.io/gce-pd    #kubernetes.io/aws-ebs
parameters:
type: [pd-standard| pd-ssd]  # gp2
volumeBindingMode: WaitForFirstConsumer

----------------------------------------------------------------------------------------------------------------------------------------------------------------------
#@networking
#Ingress Resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: service1
            port:
              number: 80
  - host: "*.foo.com"
    http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: service2
            port:
              number: 80
---
#@secure Ingress
You can secure an Ingress by specifying a Secret that contains a TLS private key and certificate. The Ingress resource only supports a single 
TLS port, 443, and assumes TLS termination at the ingress point (traffic to the Service and its Pods is in plaintext). If the TLS configuration 
section in an Ingress specifies different hosts, they are multiplexed on the same port according to the hostname specified through the
SNI TLS extension (provided the Ingress controller supports SNI). The TLS secret must contain keys named tls.crt and tls.key that contain the 
certificate and private key to use for TLS. 
apiVersion: v1
kind: Secret
metadata:
  name: testsecret-tls
  namespace: default
data:
  tls.crt: base64 encoded cert
  tls.key: base64 encoded key
type: kubernetes.io/tls
Referencing this secret in an Ingress tells the Ingress controller to secure the channel from the client to the load balancer using TLS. 
You need to make sure the TLS secret you created came from a certificate that contains a Common Name (CN), also known as a Fully Qualified Domain Name (FQDN) for https-example.foo.com.
Note: Keep in mind that TLS will not work on the default rule because the certificates would have to be issued for all the possible sub-domains.
Therefore, hosts in the tls section need to explicitly match the host in the rules section.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
spec:
  tls:
  - hosts:
      - https-example.foo.com
    secretName: testsecret-tls
  rules:
  - host: https-example.foo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80
 ---
 
#@networkpolicy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 5978
        
   
#@namespaceSelector
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
   podSelector:
        matchLabels:
           run: nginx
   policyTypes:
     - Ingress
   ingress:
     - from:
         namespaceSelector:
             matchLabels:
                name: dev
       ports:      
        - port: 80

#@port 

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
   podSelector:
        matchLabels:
           run: nginx
   policyTypes:
     - Ingress
   ingress:
      - ports:      
          - port: 80
